Create initial support for load tests with Gatling